# enterprise-mcp-agent-system

./: .env.example  .gitignore  Makefile  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: edges.py  graph.py  prompts.py
backend/app/agent/nodes/: approval_gate.py  error_handler.py  planner_node.py  router_node.py  synthesizer_node.py  tool_executor.py
backend/app/agent/subagents/: research_agent.py  triage_agent.py
backend/app/api/: websocket.py
backend/app/api/v1/: auth.py  chat.py  health.py  mcp_servers.py  sessions.py
backend/app/db/: engine.py  redis_client.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py
backend/app/guardrails/: input.py  pii_detector.py  rails.py
backend/app/guardrails/config/: config.yml  pii.co  topic.co
backend/app/guardrails/rails/: input.co
backend/app/mcp/: client.py  registry.py
backend/app/middleware/: auth.py  error_handler.py  logging_mw.py
backend/app/models/: database.py  schemas.py
backend/app/observability/: metrics.py
backend/app/services/: approval_service.py  audit_service.py  chat_service.py  cost_tracker.py  report_service.py  session_service.py
backend/tests/: conftest.py
backend/tests/eval/: eval_runner.py  eval_scorers.py
backend/tests/test_agent/: test_graph.py  test_planner.py  test_router.py
backend/tests/test_api/: test_auth.py  test_chat.py  test_health.py  test_sessions.py
backend/tests/test_guardrails/: test_input_rails.py  test_output_rails.py  test_pii.py
docker/: docker-compose.dev.yml  docker-compose.yml
e2e/: app.spec.ts  package.json
enterprise-mcp-agent/: .env.example  .gitignore  Makefile  README.md
enterprise-mcp-agent/backend/: Dockerfile  pyproject.toml
enterprise-mcp-agent/backend/app/: config.py
enterprise-mcp-agent/backend/app/agent/: checkpointer.py  graph.py  state.py  tools.py
enterprise-mcp-agent/backend/app/agent/nodes/: planner_node.py  router_node.py  synthesizer_node.py
enterprise-mcp-agent/backend/app/agent/subagents/: research_agent.py  triage_agent.py
enterprise-mcp-agent/backend/app/api/: router.py
enterprise-mcp-agent/backend/app/api/v1/: approvals.py  auth.py  chat.py  mcp_servers.py  reports.py  sessions.py
enterprise-mcp-agent/backend/app/db/migrations/versions/: 0001_initial_schema.py
enterprise-mcp-agent/backend/app/guardrails/: output.py  pii_detector.py  rails.py
enterprise-mcp-agent/backend/app/guardrails/config/: config.yml
enterprise-mcp-agent/backend/app/guardrails/rails/: output.co
enterprise-mcp-agent/backend/app/models/: database.py  enums.py  schemas.py
enterprise-mcp-agent/backend/app/observability/: metrics.py  tracing.py
enterprise-mcp-agent/backend/app/services/: chat_service.py  cost_tracker.py  report_service.py
enterprise-mcp-agent/backend/tests/: conftest.py
enterprise-mcp-agent/backend/tests/eval/: eval_runner.py  eval_scorers.py  eval_tasks.json
enterprise-mcp-agent/backend/tests/test_agent/: test_graph.py
enterprise-mcp-agent/backend/tests/test_api/: test_chat.py
frontend/: Dockerfile  eslint.config.js  index.html  (+4 more)
(+96 files in other folders)
